--- a/src/app/features/memorial/memorial-section.html
+++ b/src/app/features/memorial/memorial-section.html
@@ -51,7 +51,7 @@
           
           <!-- Placeholder for newspaper link -->
           <div class="memorial-link mt-4">
-            <a href="PLACEHOLDER_ZEITUNGSBERICHT_LINK" 
+            <a href="https://www.luzernerzeitung.ch/zentralschweiz/stadt-region-luzern/zum-tod-von-marianne-hofer-sie-faszinierte-generationen-von-luzerner-kindern-mit-sprechenden-tieren-poesie-und-sandmalerei-ld.2775844" 
                target="_blank" 
                rel="noopener noreferrer" 
                class="btn btn-outline-primary">
