--- a/src/app/features/merch/merch-detail-dialog.html
+++ b/src/app/features/merch/merch-detail-dialog.html
@@ -1,31 +1,32 @@
-<div class="merch-detail-container">
-  <div class="merch-header">
-    <h2 class="merch-title">{{ data.merchItem.title }}</h2>
-    <button class="close-button" (click)="close()">&times;</button>
-  </div>
-
-  <div class="merch-content">
-    <div class="merch-image">
+<app-base-dialog [title]="data.merchItem.title">
+  <app-dialog-two-column>
+    <!-- Image Column -->
+    <div slot="image">
       <img [src]="data.merchItem.image" [alt]="data.merchItem.title" class="img-fluid">
     </div>
     
-    <div class="merch-info">
-      <div class="merch-description" [innerHTML]="data.merchItem.description"></div>
+    <!-- Content Column -->
+    <div slot="content">
+      <app-dialog-info-section title="Beschreibung">
+        <div [innerHTML]="data.merchItem.description"></div>
+      </app-dialog-info-section>
       
       @if (data.merchItem.longDescription) {
-      <div class="merch-long-description" [innerHTML]="data.merchItem.longDescription"></div>
+        <app-dialog-info-section title="Details">
+          <div [innerHTML]="data.merchItem.longDescription"></div>
+        </app-dialog-info-section>
       }
-            
-      <div class="merch-actions">
-        @if (data.merchItem.notificationEmail) {
+      
+      @if (data.merchItem.notificationEmail) {
+        <app-dialog-info-section title="">
           <a 
             [href]="'mailto:' + data.merchItem.notificationEmail + '?subject=Buchungsanfrage: ' + data.merchItem.title + '&body=Hallo,%0A%0AIch möchte gerne folgendes Stück buchen:%0A%0A' + data.merchItem.title + '%0A%0A%0A%0AVielen Dank und freundliche Grüsse'" 
             class="btn btn-secondary"
           >
             Buchungsanfrage senden
           </a>
-        } 
-      </div>
+        </app-dialog-info-section>
+      }
     </div>
-  </div>
-</div>
+  </app-dialog-two-column>
+</app-base-dialog>
