--- a/src/app/shared/components/countdown.html
+++ b/src/app/shared/components/countdown.html
@@ -1,18 +1,18 @@
 <span class="countdown-box">
   <span class="days">
     <span class="number">{{ timeLeft().days }}</span>
-    <span class="unit">Days</span>
+    <span class="unit">Tage</span>
   </span>
   <span class="hours">
     <span class="number">{{ timeLeft().hours }}</span>
-    <span class="unit">Hrs</span>
+    <span class="unit">Std</span>
   </span>
   <span class="minutes">
     <span class="number">{{ timeLeft().minutes }}</span>
-    <span class="unit">Mins</span>
+    <span class="unit">Min</span>
   </span>
   <span class="secs">
     <span class="number">{{ timeLeft().seconds }}</span>
-    <span class="unit">Secs</span>
+    <span class="unit">Sek</span>
   </span>
 </span>
