--- a/src/app/shared/components/countdown.css
+++ b/src/app/shared/components/countdown.css
@@ -15,3 +15,10 @@
   padding-right: 5px;
   font-size: 16px;
 }
+
+/* Hide seconds on small devices to save space */
+@media (max-width: 767.98px) {
+  .countdown-box .secs {
+    display: none;
+  }
+}
